manifests/gitea.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-first-segment
spec:
  stripPrefixRegex:
    regex:
      - "/\\w+"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
    # traefik.http.middlewares.striprepos.stripprefix.prefixes: /repos
    traefik.ingress.kubernetes.io/router.middlewares: strip-first-segment@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /tests
        pathType: Prefix
        backend:
          serviceName: gitea
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: gitea
  name: gitea
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gitea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/data"
          name: gitea-data
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data
